# scrap-portalcl

./: .gitignore  pyproject.toml  scrapper.ipynb
